--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,17 +5,17 @@
 
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "pip"
+    directory: "/"
     schedule:
       interval: "daily"
 
-  - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "gomod"
+    directory: "/"
     schedule:
       interval: "daily"
 
-- package-ecosystem: "npm" # See documentation for possible values
-    directory: "/" # Location of package manifests
+- package-ecosystem: "npm"
+    directory: "/"
     schedule:
       interval: "daily"
